<resources>
    <string name="app_name">SmartPark Parking System</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_profile">Profile</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_logout">Log out</string>
    <string name="menu_history">History</string>
    <string name="menu_entry">Entry Logs</string>
    <string name="menu_exit">Exit Logs</string>
</resources>