<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/nav_dashboard">

    <fragment
        android:id="@+id/nav_dashboard"
        android:name="com.example.smartparkparkingsystem.ui.dashboard.DashboardFragment"
        android:label="@string/menu_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/nav_profile2"
        android:name="com.example.smartparkparkingsystem.ui.dashboard.AdminProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_admin_profile" />

    <fragment
        android:id="@+id/nav_entry"
        android:name="com.example.smartparkparkingsystem.ui.dashboard.EntryFragmentAdmin"
        android:label="@string/menu_entry"
        tools:layout="@layout/fragment_entryadmin" />

    <fragment
        android:id="@+id/nav_exit"
        android:name="com.example.smartparkparkingsystem.ui.dashboard.ExitFragmentAdmin"
        android:label="@string/menu_exit"
        tools:layout="@layout/fragment_exitadmin" />
</navigation>